[tool.poetry]
name = "itembed"
version = "0.5.0"
description = "word2vec for itemsets"
license = "MIT"
authors = [
    "Johan Berdat <jojolebarjos@gmail.com>",
]
readme = "README.md"
repository = "https://github.com/jojolebarjos/itembed"
documentation = "https://itembed.readthedocs.io/en/stable/"
keywords = [
    "itemset",
    "word2vec",
    "embedding",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
]
packages = [{include = "itembed", from = "src"}]

[tool.poetry.dependencies]
python = "^3.6"
numba = ">= 0.34"
scipy = ">= 0.16"
tqdm = ">= 1.0"
# TODO dependency groups https://python-poetry.org/docs/pyproject/#dependencies-and-dependency-groups

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/jojolebarjos/itembed/issues"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
