[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "itembed"
authors = [
  {name = "Johan Berdat", email = "jojolebarjos@gmail.com"},
]
license = {text = "MIT License"}
description = "word2vec for itemsets"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numba >=0.34, <1.0",
    "scipy >=0.16, <2.0",
    "tqdm >=1.0",
]
keywords = [
    "itemset",
    "word2vec",
    "embedding",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://sdsc-innovation.github.io/itembed/"
Repository = "https://github.com/sdsc-innovation/itembed.git"
Issues = "https://github.com/sdsc-innovation/itembed/issues"

[tool.setuptools.dynamic]
version = {attr = "itembed.__version__"}

[tool.ruff]
extend-include = ["*.ipynb"]
target-version = "py37"
line-length = 88

[tool.lint.ruff]
extend-select = [
    "W605",    # pycodestyle: invalid-escape-sequence
    "S102",    # flake8-bandit: exec-builtin
    "INP",     # flake8-no-pep420
    "PYI",     # flake8-pyi
    "PT",      # flake8-pytest-style
    "PGH",     # pygrep-hooks
    "PL",      # Pylint
    "NPY",     # NumPy-specific rules
    "RUF",     # Ruff-specific rules
]
ignore = [
    "E741",    # ambiguous-variable-name
    "PLR0913", # too-many-arguments
    "PLR2004", # magic-value-comparison
    "NPY002",  # numpy-legacy-random
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["INP001"]
"[!t][!e][!s][!t][!s]*/**" = ["PT"]
